Fix small bug in booking creation. Logic for bookings view in process

--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
 	</body>
 </html>
 
-
+<script type="text/javascript" src="../dpd.js"></script>
 <script>
 	$(document).ready(function(){
 		$('head').load('/layout/fluid.html');
