--- a/public/productView.html
+++ b/public/productView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="/web/js/jquery-2.2.4.min.js"></script>
 	</head>
 	<body>
 		<div id="navbar"></div>
