--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,6 @@
 		<p>You've just created a Deployd app. You can add front-end files in the <code>public</code> folder.</p>
 		<p>If you're new to Deployd, have a look at the <a href="http://docs.deployd.com/docs/getting-started/what-is-deployd.html">Getting Started Guide</a> or <a href="http://docs.deployd.com/docs/getting-started/your-first-api.html">Hello World Tutorial</a>.</p>
 		<p>If you want to log in just click <a href="/login.html">HERE!</a></p>
+		<p>WEB <a href="/login.html">WEB</a></p>
 	</body>
 </html>
