--- a/public/login.html
+++ b/public/login.html
@@ -6,8 +6,8 @@
 		<div class="container">
 			<div class="jumbotron">
 			  	<form class="form-signin">
-			  		<input type="text" name="user" class="form-control input-user">
-			  		<input type="password" name="pass" class="form-control input-pass">
+			  		<input type="text" name="user" class="form-control input-user" placeholder="User">
+			  		<input type="password" name="pass" class="form-control input-pass" placeholder="Password">
 			  		<input type="submit" class="btn btn-lg btn-primary btn-block" value="Submit">
 			  	</form>
 		  	</div>
